--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,15 @@ jobs:
           cache: npm
           cache-dependency-path: backend/package-lock.json
 
+      # Option B: cache node_modules explicitly
+      - name: Cache node_modules (backend)
+        uses: actions/cache@v4
+        with:
+          path: backend/node_modules
+          key: ${{ runner.os }}-backend-node_modules-${{ hashFiles('backend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-backend-node_modules-
+
       - name: Install dependencies
         run: npm ci
 
@@ -57,6 +66,15 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: frontend/package-lock.json
+
+      # Option B: cache node_modules explicitly
+      - name: Cache node_modules (frontend)
+        uses: actions/cache@v4
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-frontend-node_modules-${{ hashFiles('frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-frontend-node_modules-
 
       - name: Install dependencies
         run: npm ci
@@ -116,3 +134,11 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/myapp-frontend:latest
             ${{ secrets.DOCKER_USERNAME }}/myapp-frontend:${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Trigger Render deploy (backend)
+        run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}"
