--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 JWT_SECRET=yourSuperSecretKey12345
 JWT_EXPIRES_IN=1h
 ABSTRACT_API_KEY=0b30eb6643af4accb7b7cef9a378bce7
+MONGODB_URI=mongodb+srv://idarezostudents_db_user:rr1963bb@cluster0.wz9ps25.mongodb.net/mydatabase
 
