--- a/.github/workflows/docker-environments.yml
+++ b/.github/workflows/docker-environments.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build & push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./site
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tag }}
 
