--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,3 +142,5 @@ jobs:
     steps:
       - name: Trigger Render deploy (backend)
         run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}"
+      - name: Trigger Render deploy (frontend)
+        run: curl -fsSL -X POST "${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}"
