--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
 
   docker-build-push:
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
+    needs: [backend-build, frontend-build]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
@@ -137,7 +137,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: docker
+    needs: docker-build-push
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Trigger Render deploy (backend)
