--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [main, production]
+    branches: [main,production]
   pull_request:
     branches: [main]
 
 jobs:
-  backend-build:
+  backend:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -52,7 +52,7 @@ jobs:
           name: backend-build
           path: backend/build/
 
-  frontend-build:
+  frontend:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -99,33 +99,10 @@ jobs:
             frontend/build/
             frontend/dist/
 
-  sonarcloud:
+  docker:
     runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download backend coverage artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-coverage
-          path: backend/coverage
-
-      - name: Download frontend coverage artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-coverage
-          path: frontend/coverage
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v3
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  docker-build-push:
-    runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build,sonarcloud]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [backend, frontend]
+    if: github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'production')
     steps:
       - uses: actions/checkout@v4
 
@@ -160,10 +137,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: docker-build-push
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: docker
+    if: github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'production')
     steps:
       - name: Trigger Render deploy (backend)
         run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}"
-      - name: Trigger Render deploy (frontend)
-        run: curl -fsSL -X POST "${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}"
